a11y: Fix color contrast issues in small text

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -52,6 +52,11 @@ h1, h2, h3, h4, h5, h6,
   font-weight: 900;
   margin-bottom: 20px;
 
+  // Override BS3's lighter color
+  & small {
+    color: inherit;
+  }
+
   & a {
     text-decoration: none;
   }
